compiler/testData/diagnostics/tests/overload/ConflictingOverloadsFunsDifferentReturnInPackage.kt
// RUN_PIPELINE_TILL: FRONTEND
package qwertyuiop

<!CONFLICTING_OVERLOADS!>fun c(s: String)<!> {
}

<!CONFLICTING_OVERLOADS!>fun c(s: String)<!> {
}

/* GENERATED_FIR_TAGS: functionDeclaration */
